Make UI Improvements

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/474x/3f/26/bc/3f26bc9c866e180b778e63783c8e9ff7.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jalasoft Pokedex</title>
   </head>
